; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_dump.c_check_name_collision.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_dump.c_check_name_collision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.check_name_collision_baton = type { %struct.TYPE_2__, i32, %struct.dir_baton* }
%struct.TYPE_2__ = type { i32 }
%struct.dir_baton = type { i32, %struct.edit_baton* }
%struct.edit_baton = type { i32, i32 }

@normalized_unique = common dso_local global i8* null, align 8
@normalized_collision = common dso_local global i8* null, align 8
@SVN_UTF__UNKNOWN_LENGTH = common dso_local global i32 0, align 4
@svn_repos_notify_warning_name_collision = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Duplicate representation of path '%s'\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32, i8*, i32*)* @check_name_collision to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @check_name_collision(i8* %0, i8* %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.check_name_collision_baton*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca %struct.dir_baton*, align 8
  %15 = alloca %struct.edit_baton*, align 8
  %16 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to %struct.check_name_collision_baton*
  store %struct.check_name_collision_baton* %18, %struct.check_name_collision_baton** %11, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %22 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %21, i32 0, i32 0
  %23 = call i32 @svn_utf__normalize(i8** %12, i8* %19, i32 %20, %struct.TYPE_2__* %22)
  %24 = call i32 @SVN_ERR(i32 %23)
  %25 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %26 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i8*, i8** %12, align 8
  %29 = call i8* @svn_hash_gets(i32 %27, i8* %28)
  store i8* %29, i8** %13, align 8
  %30 = load i8*, i8** %13, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %44, label %32

32:                                               ; preds = %5
  %33 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %34 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %37 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load i8*, i8** %12, align 8
  %41 = call i32 @apr_pstrdup(i32 %39, i8* %40)
  %42 = load i8*, i8** @normalized_unique, align 8
  %43 = call i32 @svn_hash_sets(i32 %35, i32 %41, i8* %42)
  br label %90

44:                                               ; preds = %5
  %45 = load i8*, i8** %13, align 8
  %46 = load i8*, i8** @normalized_collision, align 8
  %47 = icmp eq i8* %45, %46
  br i1 %47, label %48, label %49

48:                                               ; preds = %44
  br label %89

49:                                               ; preds = %44
  %50 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %51 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %50, i32 0, i32 2
  %52 = load %struct.dir_baton*, %struct.dir_baton** %51, align 8
  store %struct.dir_baton* %52, %struct.dir_baton** %14, align 8
  %53 = load %struct.dir_baton*, %struct.dir_baton** %14, align 8
  %54 = getelementptr inbounds %struct.dir_baton, %struct.dir_baton* %53, i32 0, i32 1
  %55 = load %struct.edit_baton*, %struct.edit_baton** %54, align 8
  store %struct.edit_baton* %55, %struct.edit_baton** %15, align 8
  %56 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %57 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %60 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = load i8*, i8** %12, align 8
  %64 = call i32 @apr_pstrdup(i32 %62, i8* %63)
  %65 = load i8*, i8** @normalized_collision, align 8
  %66 = call i32 @svn_hash_sets(i32 %58, i32 %64, i8* %65)
  %67 = load %struct.dir_baton*, %struct.dir_baton** %14, align 8
  %68 = getelementptr inbounds %struct.dir_baton, %struct.dir_baton* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 8
  %70 = load i8*, i8** %12, align 8
  %71 = load i32*, i32** %10, align 8
  %72 = call i8* @svn_relpath_join(i32 %69, i8* %70, i32* %71)
  %73 = load i32, i32* @SVN_UTF__UNKNOWN_LENGTH, align 4
  %74 = load %struct.check_name_collision_baton*, %struct.check_name_collision_baton** %11, align 8
  %75 = getelementptr inbounds %struct.check_name_collision_baton, %struct.check_name_collision_baton* %74, i32 0, i32 0
  %76 = call i32 @svn_utf__normalize(i8** %16, i8* %72, i32 %73, %struct.TYPE_2__* %75)
  %77 = call i32 @SVN_ERR(i32 %76)
  %78 = load i32*, i32** %10, align 8
  %79 = load %struct.edit_baton*, %struct.edit_baton** %15, align 8
  %80 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %79, i32 0, i32 1
  %81 = load i32, i32* %80, align 4
  %82 = load %struct.edit_baton*, %struct.edit_baton** %15, align 8
  %83 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 4
  %85 = load i32, i32* @svn_repos_notify_warning_name_collision, align 4
  %86 = call i32 @_(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %87 = load i8*, i8** %16, align 8
  %88 = call i32 @notify_warning(i32* %78, i32 %81, i32 %84, i32 %85, i32 %86, i8* %87)
  br label %89

89:                                               ; preds = %49, %48
  br label %90

90:                                               ; preds = %89, %32
  %91 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %91
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_utf__normalize(i8**, i8*, i32, %struct.TYPE_2__*) #1

declare dso_local i8* @svn_hash_gets(i32, i8*) #1

declare dso_local i32 @svn_hash_sets(i32, i32, i8*) #1

declare dso_local i32 @apr_pstrdup(i32, i8*) #1

declare dso_local i8* @svn_relpath_join(i32, i8*, i32*) #1

declare dso_local i32 @notify_warning(i32*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
